<resources>
    <string name="app_name">City Of Ideas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account"><u>Geen account? Maak er nu een aan!</u></string>
    <string name="password">Passwoord</string>
    <string name="email">E-mailadres</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Gebruikersnaam of e-mail</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welkom "</string>
    <string name="invalid_username">Gebruikersnaam is verplicht!</string>
    <string name="invalid_password">
        Wachtwoord moet minstens 6 karakters zijn en minstens 1 getal, 1 hoofdletter en 1 speciaal teken bevatten
    </string>
    <string name="login_failed">"Login mislukt"</string>
    <string name="register">Registreren</string>
    <string name="already_account"><u>Al een account? Log in!</u></string>
    <string name="edittext">Geef hier je antwoord</string>
    <string name="Email">Geef hier je e-mailadres</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="prompt_confirm_password">Bevestig wachtwoord</string>
    <string name="prompt_email">E-mail</string>
    <string name="invalid_email">Ongeldige e-mail</string>
    <string name="invalid_confirm_password">Wachtwoorden komen niet overeen</string>
    <string name="qr">QR</string>
    <string name="confirm">Bevestig</string>
    <string name="vraag_1_15">Vraag 1/15</string>
    <string name="dummy_textview">TextView</string>
    <string name="search_hint">Zoeken…</string>
    <string name="facebook_app_id">1038823499646079</string>
    <string name="upload">upload foto</string>
    <string name="upload_video">gebruik deze video</string>
    <string name="Take_Picture">neem een foto</string>
    <string name="search_projects">Projecten</string>
    <string name="search_ideations">Ideations</string>
    <string name="search_ideas">Ideeën</string>
    <string name="search_reactions">Reacties</string>
    <string name="search_results_for">Zoekresultaten voor</string>
    <string name="Load_more">Bekijk meer</string>
    <string name="beste_reactie">Beste reactie</string>
    <string name="username">Gebruikersnaam</string>
    <string name="email_hint">E-mail</string>
    <string name="username_hint">Gebruikersnaam</string>
    <string name="username_label">Gebruikersnaam:</string>
    <string name="surname">Voornaam</string>
    <string name="surname_label">Voornaam:</string>
    <string name="last_name">Achternaam</string>
    <string name="last_name_label">Achternaam:</string>
    <string name="sex">Geslacht</string>
    <string name="sex_label">Geslacht:</string>
    <string name="age">Leeftijd</string>
    <string name="age_label">Leeftijd:</string>
    <string name="zip_code">Postcode</string>
    <string name="zip_code_label">Postcode:</string>
    <string name="save">Opslaan</string>
    <string name="title">Titel</string>
    <string name="send_idea">Verzend Idee</string>
    <string name="dummy_user">Glenn Ooms</string>
    <string name="dummy_reactions">5 Reacties</string>
    <string name="dummy_votes">20 Stemmen</string>
    <string name="dummy_shares">10 keer gedeeld</string>
    <string name="vote">Stem</string>
    <string name="share">Share</string>
    <string name="post_reactions">Plaats hier je reactie</string>
    <string name="share_fb">Deel op Facebook</string>
    <string name="share_tw">Deel op Twitter</string>
    <string name="dummy_reaction_idea">Hier komt de reactie op een idee</string>
    <string name="dummy_title_project">Titel van het project</string>
    <string name="view_idea">Bekijk Ideeën</string>
    <string name="dummy_ideas">5 Ideeën</string>
    <string name="todo">TODO</string>
    <string name="dummy_reaction">Wa zijde gij van plan. Ik vind da hier totaal niet gepast zomaar een speeltuin wetten
        naast een burger king dat is kinderen aanmoedigen om ongezond te eten
    </string>
    <string name="dummy_likes">5</string>
    <string name="input">Geef je input!</string>
    <string name="email_label">E-mail:</string>

    <string-array name="spinSexItems">
        <item>--</item>
        <item>Man</item>
        <item>Vrouw</item>
        <item>Andere</item>
    </string-array>
</resources>
