<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
          android:title="@string/search"
          android:icon="@android:drawable/ic_menu_search"
          app:actionViewClass="android.widget.SearchView"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/qrScanner"
          android:icon="@drawable/ic_qr_white_32"
          app:showAsAction="ifRoom" android:title="@string/qr" android:visible="false"/>
    <item android:id="@+id/login"
          android:title="@string/login"
          android:icon="@android:drawable/ic_lock_idle_lock"
          app:showAsAction="ifRoom"/>
    <item android:title="@string/account" android:id="@+id/account" app:showAsAction="never" android:visible="false"/>
    <item android:title="@string/log_out" android:id="@+id/logout" app:showAsAction="never" android:visible="false"/>
</menu>