<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/dummy_title_project"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/TitleIdeation"
                android:gravity="center"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/Share"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
        <android.support.v7.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/Share"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@android:drawable/ic_menu_share"

                android:background="#00FFFFFF"
                android:tint="@color/com_facebook_button_background_color_focused_disabled"
                android:backgroundTint="#00FFFFFF"
        />
        <Button
                android:text="@string/view_idea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/giveIdea"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitleIdeation" android:backgroundTint="#027CFF"
                style="@style/Widget.AppCompat.Button.Colored" android:textStyle="bold"/>

        <TextView
                android:text="@string/dummy_ideas"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/IdeationIdeaCount"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@+id/IdeationVoteCount"
                app:layout_constraintRight_toLeftOf="@+id/IdeationVoteCount"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/dummy_votes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/IdeationVoteCount"
                android:gravity="center_horizontal"
                app:layout_constraintRight_toLeftOf="@+id/IdeationShareCount"
                app:layout_constraintLeft_toRightOf="@+id/IdeationIdeaCount"
                app:layout_constraintTop_toBottomOf="@+id/giveIdea"

        />
        <TextView
                android:text="@string/dummy_shares"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/IdeationShareCount"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/IdeationVoteCount"
                app:layout_constraintTop_toTopOf="@id/IdeationVoteCount"
        />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
