<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".login.LoginActivity">

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="username" tools:targetApi="o" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/email" android:visibility="visible"/>
    <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="email" tools:targetApi="o"
            app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/password" android:visibility="gone"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="password" tools:targetApi="o"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/confirmPassword"/>
    <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_confirm_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="password" tools:targetApi="o"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/password"
            android:visibility="gone"/>

    <Button
            android:id="@+id/login"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
            app:layout_constraintVertical_bias="0.25" style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="#027CFF" android:textColor="@color/com_facebook_button_background_color_focused"
            android:textSize="20sp" android:textStyle="bold" android:padding="16sp"/>

    <TextView
            android:text="@string/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CreateAccountText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
            android:clickable="true" android:focusable="true" android:textSize="18sp"/>

    <ProgressBar
            android:id="@+id/loginLoading"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/CreateAccountText"/>
</android.support.constraint.ConstraintLayout>