<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SearchResultsActivity">

    <TextView
            android:text="@string/search_results_for"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tvSearchString"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:textStyle="bold" android:textSize="20sp"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/svSearchResults" app:layout_constraintTop_toBottomOf="@+id/tvSearchString">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/search_projects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvSearchedProjects"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textAlignment="center"
                    android:textStyle="bold"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/listSearchedProjects">
            </RelativeLayout>
            <TextView
                    android:text="@string/search_ideations"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tvSearchedIdeations"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                    android:textAllCaps="false"
                    android:textAlignment="center" android:layout_marginBottom="8dp" android:textStyle="bold"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/listSearchedIdeations">

            </RelativeLayout>
            <TextView
                    android:text="@string/search_ideas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tvSearchedIdeas"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center" android:textStyle="bold"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/listSearchedIdeas">

            </RelativeLayout>
            <TextView
                    android:text="@string/search_reactions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tvSearchedReactions"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                    android:textAlignment="center" android:textStyle="bold"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/listSearchedReactions">

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>